--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col my-auto">
                     <h3 class="text-right title display-4">
-
+                        CRIPTOGRAFIA
                     </h3>
                 </div>
 
@@ -695,7 +695,7 @@
                 <div class="row">
                     <div class="col text-center my-auto">
                         <h3 class="display-4">GRAZIE</h3>
-                        <h5 class="firme">Alessandro Mieli & Marco Giuseppini</h5>
+                        <h5 class="firme">Alessandro Mieli - Francesco Massimei - Gabriele Muzi - Lorenzo Napoli</h5>
                     </div>
                 </div>
             </div>
