--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 ">
             <div class="row">
                 <div class="col my-auto">
-                    <h3 class="text-right title display-4">
-                        CRIPTOGRAFIA
+                    <h3 class="text-center title display-3">
+                        CRIPTOGRAFIA FANTASTICA <br /><span class="display-4">E DOVE TROVARLA</span>
                     </h3>
                 </div>
 
