slide animation on

--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
   </script>
   <script type="text/javascript">
     var myFullpage = new fullpage("#fullpage", {
-      scrollingSpeed: 0, //da togliere alla fine
+      // scrollingSpeed: 0, //da togliere alla fine
       afterLoad: function (anchorLink, index) {
         console.log(
           "AFTER LOAD - anchorLink:" +
